--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hello world
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>pypy</title>
+  </head>
+<body>
+    <p>py的主页</p>
+    <a href="pyaxol.github.io/blog">blog</a>
+    <a href="pyaxol.github.io/tools">tools</a>
+</body>
+</html>
