--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 <body>
     <p>py的主页</p>
-    <a href="pyaxol.github.io/blog">blog</a>
-    <a href="pyaxol.github.io/tools">tools</a>
+    <a href="/blog">blog</a>
+    <a href="/tools">tools</a>
 </body>
 </html>
