--- a/tools/index.html
+++ b/tools/index.html
@@ -1,1 +1,11 @@
-a place to put some useful tools in...
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <title>title</title>
+</head>
+<body>
+    <p>current tools:</p>
+    <a></a>
+</body>
+</html>
