--- a/tools/format/index.html
+++ b/tools/format/index.html
@@ -108,6 +108,7 @@
 </head>
 <body>
     <h1>C++代码格式化工具</h1>
+    <p>作用：把一段 C++ 代码中多余空格删去。</p>
     <p>PS:使用 deepseek 辅助编写，srds 让它改了两位数次……</p>
     <div class="code-container">
         <div class="container">
