--- a/tools/format/index.html
+++ b/tools/format/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C++代码格式化工具</title>
+    <title>Peiyuan的C++代码格式化工具</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -107,7 +107,8 @@
     </style>
 </head>
 <body>
-    <h1>C++代码格式化工具</h1>
+    <h1>C++代码格式化工具(去空格)</h1>
+    <h2>MADE BY PEIYUAN WITH THE HELP OF DS</h2>
     <p>作用：把一段 C++ 代码中多余空格删去。</p>
     <p>PS:使用 deepseek 辅助编写，srds 让它改了两位数次……</p>
     <div class="code-container">
