--- a/tools/format/index.html
+++ b/tools/format/index.html
@@ -1,1 +1,124 @@
-<!DOCTYPE html><html lang="zh-CN"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0"><title>Peiyuan的C++代码格式化工具</title><style>body{font-family:Arial,sans-serif;max-width:800px;margin:0 auto;padding:20px;line-height:1.6}.code-container{display:flex;flex-direction:column;gap:15px}textarea{width:calc(100% - 22px);height:300px;padding:10px;border:1px solid #ccc;border-radius:4px;font-family:'Courier New',monospace;font-size:14px;tab-size:4;resize:vertical}.output-wrapper{border:1px solid #ddd;border-radius:4px;background-color:#f8f8f8;margin-top:5px}.output-header{background-color:#eee;padding:8px 10px;border-bottom:1px solid #ddd;font-weight:bold;border-radius:4px 4px 0 0}.output-container{position:relative}#outputCode{width:calc(100% - 22px);height:280px;padding:10px;font-family:'Courier New',monospace;font-size:14px;tab-size:4;overflow:auto;white-space:pre;margin:0;border:none;border-radius:0 0 4px 4px}.copy-btn{position:absolute;top:10px;right:10px;padding:5px 10px;background-color:#4CAF50;color:white;border:none;border-radius:4px;cursor:pointer;font-size:12px;transition:background-color 0.3s;z-index:10}.copy-btn:hover{background-color:#45a049}.copy-btn.copied{background-color:#2196F3}button#formatBtn{padding:10px 15px;background-color:#4CAF50;color:white;border:none;border-radius:4px;cursor:pointer;font-size:16px;transition:background-color 0.3s}button#formatBtn:hover{background-color:#45a049}h1{color:#333;text-align:center;margin-bottom:20px}h2{margin:0 0 5px 0;color:#444;font-size:18px}.container{display:flex;flex-direction:column}</style></head><body><h1>C++代码格式化工具(去空格)</h1><h2><div style="text-align:center"><b>MADE BY PEIYUAN</b></div></h2><p>作用：把一段 C++ 代码中多余空格删去。</p><p>PS:使用 deepseek 辅助编写，srds 让它改了两位数次……</p><div class="code-container"><div class="container"><h2>输入代码:</h2><textarea id="inputCode" placeholder="在这里粘贴您的C++代码..."></textarea></div><button id="formatBtn">格式化代码</button><div class="container"><h2>格式化结果:</h2><div class="output-wrapper"><div class="output-header">格式化后的代码</div><div class="output-container"><pre id="outputCode"></pre><button class="copy-btn" id="copyBtn">Copy</button></div></div></div></div><script>document.getElementById('formatBtn').addEventListener('click',function(){const _0x4a3e=document.getElementById('inputCode').value;const _0x1f2d=_0x3a8d(_0x4a3e);document.getElementById('outputCode').textContent=_0x1f2d;const _0x2e4f=document.getElementById('outputCode');_0x2e4f.scrollTop=_0x2e4f.scrollHeight});document.getElementById('copyBtn').addEventListener('click',function(){const _0x3b5c=document.getElementById('outputCode').textContent;navigator.clipboard.writeText(_0x3b5c).then(()=>{const _0x5d21=document.getElementById('copyBtn');_0x5d21.textContent='Copied!';_0x5d21.classList.add('copied');setTimeout(()=>{_0x5d21.textContent='Copy';_0x5d21.classList.remove('copied')},800)}).catch(_0x4e2f=>{console.error('复制失败: ',_0x4e2f);alert('复制失败，请手动选择文本后复制')})});function _0x3a8d(_0x5b7d){const _0x3c8e=/("(?:\\"|[^"])*")|('(?:\\'|[^'])*')/g;const _0x1a4e=[];let _0x2f3e=_0x5b7d.replace(_0x3c8e,(_0x2d8e)=>{_0x1a4e.push(_0x2d8e);return`\u0000${_0x1a4e.length-1}\u0000`});const _0x4d6e=_0x2f3e.split('\n');let _0x5e9d=[];for(let _0x3f7d=0;_0x3f7d<_0x4d6e.length;_0x3f7d++){let _0x1c8e=_0x4d6e[_0x3f7d].trimEnd();if(_0x1c8e.trim()===''){continue}_0x1c8e=_0x1c8e.replace(/^(( {4})+)/g,(_0x3b6d)=>'\t'.repeat(_0x3b6d.length/4));if(_0x1c8e.trim().startsWith('#')){let _0x4f2e=_0x1c8e.replace(/\u0000(\d+)\u0000/g,(_0x3e9d,_0x2a7e)=>_0x1a4e[parseInt(_0x2a7e)]);_0x5e9d.push(_0x4f2e);continue}if(_0x1c8e.trim()==='{'){if(_0x5e9d.length>0){const _0x5d4e=_0x5e9d.pop();_0x5e9d.push(_0x5d4e+'{');continue}}const _0x2e9d=_0x1c8e.match(/^\s*/)[0];let _0x3d8e=_0x1c8e.slice(_0x2e9d.length);_0x3d8e=_0x3d8e.replace(/\s*([=+:.\-*/%<>!&|^~])\s*/g,'$1').replace(/\s*([\(\{\[<])\s*/g,'$1').replace(/\s*([\)\}\]>])\s*/g,'$1').replace(/\s*,\s*/g,',').replace(/\s*;\s*/g,';').replace(/\s*(->|::)\s*/g,'$1').replace(/\}\s*else\s*\{/g,'}else{').replace(/\}\s*catch\s*\(/g,'}catch(').replace(/\b\s+\b/g,' ').trim();let _0x4e9e=_0x3d8e.replace(/\u0000(\d+)\u0000/g,(_0x3f9d,_0x2b7e)=>_0x1a4e[parseInt(_0x2b7e)]);_0x5e9d.push(_0x2e9d+_0x4e9e)}return _0x5e9d.join('\n')}</script><br><br><br><br></body></html>
+<!DOCTYPE html><html><head><meta charset="UTF-8"><title>C++代码格式化工具</title>
+<style>
+body {
+    font-family: Arial, sans-serif;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    line-height: 1.6;
+}
+.code-container {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+textarea {
+    width: calc(100% - 22px);
+    height: 300px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-family: 'Courier New', monospace;
+    font-size: 14px;
+    tab-size: 4;
+    resize: vertical;
+}
+.output-wrapper {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    margin-top: 5px;
+}
+.output-header {
+    background-color: #eee;
+    padding: 8px 10px;
+    border-bottom: 1px solid #ddd;
+    font-weight: bold;
+    border-radius: 4px 4px 0 0;
+}
+.output-container {
+    position: relative;
+}
+#e5f6 {
+    width: calc(100% - 22px);
+    height: 280px;
+    padding: 10px;
+    font-family: 'Courier New', monospace;
+    font-size: 14px;
+    tab-size: 4;
+    overflow: auto;
+    white-space: pre;
+    margin: 0;
+    border: none;
+    border-radius: 0 0 4px 4px;
+}
+.copy-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 5px 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 12px;
+    transition: background-color 0.3s;
+    z-index: 10;
+}
+.copy-btn:hover {
+    background-color: #45a049;
+}
+.copy-btn.copied {
+    background-color: #2196F3;
+}
+#c3d4 {
+    padding: 10px 15px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
+#c3d4:hover {
+    background-color: #45a049;
+}
+h1 {
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
+}
+h2 {
+    margin: 0 0 5px 0;
+    color: #444;
+    font-size: 18px;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+}
+</style>
+</head>
+<body>
+<h1>C++代码格式化工具</h1>
+<div class="code-container">
+    <div class="container">
+        <h2>输入代码:</h2>
+        <textarea id="a1b2"></textarea>
+    </div>
+    <button id="c3d4">格式化代码</button>
+    <div class="container">
+        <h2>格式化结果:</h2>
+        <div class="output-wrapper">
+            <div class="output-header">格式化后的代码</div>
+            <div class="output-container">
+                <pre id="e5f6"></pre>
+                <button class="copy-btn" id="g7h8">Copy</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+var _0xad3b=["\x69\x6E\x70\x75\x74\x43\x6F\x64\x65","\x76\x61\x6C\x75\x65","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x64","\x6F\x75\x74\x70\x75\x74\x43\x6F\x64\x65","\x74\x65\x78\x74\x43\x6F\x6E\x74\x65\x6E\x74","\x73\x63\x72\x6F\x6C\x6C\x54\x6F\x70","\x73\x63\x72\x6F\x6C\x6C\x48\x65\x69\x67\x68\x74","\x63\x6C\x69\x70\x62\x6F\x61\x72\x64","\x77\x72\x69\x74\x65\x54\x65\x78\x74","\x63\x6F\x70\x69\x65\x64","\x43\x6F\x70\x79","\x63\x6C\x61\x73\x73\x4C\x69\x73\x74","\x61\x64\x64","\x63\x6F\x70\x69\x65\x64","\x72\x65\x6D\x6F\x76\x65","\x73\x65\x74\x54\x69\x6D\x65\x6F\x75\x74","\x66\x61\x69\x6C\x65\x64","\x72\x65\x70\x6C\x61\x63\x65","\x74\x72\x69\x6D","\x74\x72\x69\x6D\x45\x6E\x64","\x73\x70\x6C\x69\x74","\x6A\x6F\x69\x6E","\x6D\x61\x74\x63\x68","\x73\x6C\x69\x63\x65","\x73\x74\x61\x72\x74\x73\x57\x69\x74\x68","\x70\x75\x73\x68","\x70\x6F\x70","\x6C\x65\x6E\x67\x74\x68"];document[_0xad3b[2]](_0xad3b[0])[_0xad3b[27]](_0xad3b[1],function(){var _0x7e8dx1=document[_0xad3b[2]](_0xad3b[3])[_0xad3b[4]]=_0x8c2f(this[_0xad3b[1]]);document[_0xad3b[2]](_0xad3b[3])[_0xad3b[5]]=document[_0xad3b[2]](_0xad3b[3])[_0xad3b[6]]});document[_0xad3b[2]](_0xad3b[7])[_0xad3b[27]](_0xad3b[1],function(){var _0x7e8dx2=document[_0xad3b[2]](_0xad3b[3])[_0xad3b[4]];navigator[_0xad3b[8]][_0xad3b[9]](_0x7e8dx2)[_0xad3b[15]](()=>{var _0x7e8dx3=document[_0xad3b[2]](_0xad3b[7]);_0x7e8dx3[_0xad3b[4]]=_0xad3b[10];_0x7e8dx3[_0xad3b[12]][_0xad3b[11]](_0xad3b[13]);setTimeout(()=>{_0x7e8dx3[_0xad3b[4]]=_0xad3b[14];_0x7e8dx3[_0xad3b[12]][_0xad3b[15]](_0xad3b[13])},800)})[_0xad3b[15]](_0x7e8dx4=>{console[_0xad3b[18]](_0xad3b[16],_0x7e8dx4);alert(_0xad3b[17])})});function _0x8c2f(_0x7e8dx5){var _0x7e8dx6=/("(?:\\"|[^"])*")|('(?:\\'|[^'])*')/g,_0x7e8dx7=[];_0x7e8dx5=_0x7e8dx5[_0xad3b[18]](_0x7e8dx6,function(_0x7e8dx8){return _0x7e8dx7[_0xad3b[25]](_0x7e8dx8),_0xad3b[19]+(_0x7e8dx7[_0xad3b[26]]-1)+_0xad3b[19]});var _0x7e8dx9=_0x7e8dx5[_0xad3b[21]]("\n"),_0x7e8dxa=[];for(var _0x7e8dxb=0;_0x7e8dxb<_0x7e8dx9[_0xad3b[26]];_0x7e8dxb++){var _0x7e8dxc=_0x7e8dx9[_0x7e8dxb][_0xad3b[20]]();if(_0x7e8dxc[_0xad3b[20]]()===""){continue};_0x7e8dxc=_0x7e8dxc[_0xad3b[18]](/^(( {4})+)/g,function(_0x7e8dxd){return "\t"[_0xad3b[22]](_0x7e8dxd[_0xad3b[26]]/4)});if(_0x7e8dxc[_0xad3b[20]]()[_0xad3b[24]]("#")){var _0x7e8dxe=_0x7e8dxc[_0xad3b[18]](/\u0000(\d+)\u0000/g,function(_0x7e8dxf,_0x7e8dx10){return _0x7e8dx7[parseInt(_0x7e8dx10)]});_0x7e8dxa[_0xad3b[25]](_0x7e8dxe);continue};if(_0x7e8dxc[_0xad3b[20]]()==="{"){if(_0x7e8dxa[_0xad3b[26]]>0){var _0x7e8dx11=_0x7e8dxa[_0xad3b[26]]();_0x7e8dxa[_0xad3b[25]](_0x7e8dx11+"{");continue}};var _0x7e8dx12=_0x7e8dxc[_0xad3b[23]](/^\s*/)[0],_0x7e8dx13=_0x7e8dxc[_0xad3b[24]](_0x7e8dx12[_0xad3b[26]]);_0x7e8dx13=_0x7e8dx13[_0xad3b[18]](/\s*([=+:.\-*/%<>!&|^~])\s*/g,"$1")[_0xad3b[18]](/\s*([\(\{\[<])\s*/g,"$1")[_0xad3b[18]](/\s*([\)\}\]>])\s*/g,"$1")[_0xad3b[18]](/\s*,\s*/g,",")[_0xad3b[18]](/\s*;\s*/g,";")[_0xad3b[18]](/\s*(->|::)\s*/g,"$1")[_0xad3b[18]](/\}\s*else\s*\{/g,"}else{")[_0xad3b[18]](/\}\s*catch\s*\(/g,"}catch(")[_0xad3b[18]](/\b\s+\b/g," ")[_0xad3b[20]]();var _0x7e8dx14=_0x7e8dx13[_0xad3b[18]](/\u0000(\d+)\u0000/g,function(_0x7e8dx15,_0x7e8dx16){return _0x7e8dx7[parseInt(_0x7e8dx16)]});_0x7e8dxa[_0xad3b[25]](_0x7e8dx12+_0x7e8dx14)};return _0x7e8dxa[_0xad3b[22]]("\n")}</script></body></html>
