--- a/tools/format/index.html
+++ b/tools/format/index.html
@@ -148,7 +148,7 @@
 <body>
     <h1>C++代码格式化工具(去空格)</h1>
     <h2><div style="text-align: center;"><b>MADE BY PEIYUAN</b></div></h2>
-    <p>使用方法: 勾选你需要在后面添加空格的符号, 不勾选则删除空格</p>
+    <p>使用方法: 勾选你需要在后面/周围添加空格的符号, 不勾选则删除空格</p>
     <p>PS: 可恶的美西螈又在折磨鲸鱼了，该工具使用 deepseek 辅助编写，srds 让它改了两位数次……</p>
 
     <div class="options-container">
