--- a/tools/format/index.html
+++ b/tools/format/index.html
@@ -149,7 +149,7 @@
     </style>
 </head>
 <body>
-    <h1>C++代码格式化工具(去空格)</h1>
+    <h1>C++代码格式化工具</h1>
     <h2><div style="text-align: center;"><b>MADE BY PEIYUAN</b></div></h2>
     <p>使用方法: 勾选你需要在后面/周围添加空格的符号, 不勾选则删除空格，"我们不对奇奇怪怪的码风提供支持"</p>
     <p>PS: 可恶的美西螈又在折磨鲸鱼了（但是同时也在折磨他自己，因为每次debug他都要再分析一遍！），该工具使用 deepseek 辅助编写，srds 让它改了两位数次……</p>
