--- a/tools/format/index.html
+++ b/tools/format/index.html
@@ -151,9 +151,9 @@
 <body>
     <h1>C++代码格式化工具</h1>
     <h2><div style="text-align: center;"><b>MADE BY PEIYUAN</b></div></h2>
+    <p>一个工具需要一张头图：<img src="https://pic1.imgdb.cn/item/6845820558cb8da5c83a36e8.png" alt="image.png"></p>
     <p>使用方法: 勾选你需要在后面/周围添加空格的符号, 不勾选则删除空格，"我们不对奇奇怪怪的码风提供支持"</p>
-    <p>PS: 可恶的美西螈又在折磨鲸鱼了（但是同时也在折磨他自己，因为每次debug他都要再分析一遍！），该工具使用 deepseek 辅助编写，srds 让它改了两位数次……</p>
-    <p>别看代码这么短，其实都是反反复复改了不知道多少遍才能de掉发现的bug……</p>
+    <p>PS: 可恶的美西螈又在折磨鲸鱼了（但是同时也在折磨他自己，因为每次debug他都要再分析一遍！），该工具使用 deepseek 辅助编写，srds 让它改了两位数次……别看代码这么短，其实都是反反复复改了不知道多少遍才能de掉发现的bug……</p>
     <p>然后就是关于空格没有添加完全的问题，把格式完的代码再输入几遍就可以了~</p>
     <p><a href="/tools/formatold">原始版本</a></p>
 
