--- a/tools/format/index.html
+++ b/tools/format/index.html
@@ -156,6 +156,7 @@
     <p>PS: 可恶的美西螈又在折磨鲸鱼了（但是同时也在折磨他自己，因为每次debug他都要再分析一遍，甚至很多时候ds写的代码都有语法错误！），该工具使用 deepseek 辅助编写，srds 让它改了两位数次……别看代码这么短，其实都是反反复复改了不知道多少遍才能de掉发现的bug……</p>
     <p><del>真的很不容易，三连支持一下吧c1wc1</del></p>
     <p>然后就是关于空格没有添加完全的问题，把格式完的代码再输入几遍就可以了~</p>
+    <p><a href="/tools/formatold">原始版本</a></p>
 
     <div class="options-container">
         <div class="option-group">
