--- a/tools/format/index.html
+++ b/tools/format/index.html
@@ -156,7 +156,6 @@
     <p>PS: 可恶的美西螈又在折磨鲸鱼了（但是同时也在折磨他自己，因为每次debug他都要再分析一遍，甚至很多时候ds写的代码都有语法错误！），该工具使用 deepseek 辅助编写，srds 让它改了两位数次……别看代码这么短，其实都是反反复复改了不知道多少遍才能de掉发现的bug……</p>
     <p><del>真的很不容易，三连支持一下吧c1wc1</del></p>
     <p>然后就是关于空格没有添加完全的问题，把格式完的代码再输入几遍就可以了~</p>
-    <p><a href="/tools/formatold">原始版本</a></p>
 
     <div class="options-container">
         <div class="option-group">
@@ -376,8 +375,20 @@
             const removeComments = document.getElementById('removeComments').checked;
             const braceNewline = document.getElementById('braceNewline').checked;
             
-            // 第一步：处理注释（如果启用删除注释）
-            if (removeComments) {
+            // 保护注释内容（如果不删除注释）
+            const commentMatches = [];
+            if (!removeComments) {
+                // 保护单行注释
+                code = code.replace(/\/\/.*$/gm, (match) => {
+                    commentMatches.push(match);
+                    return `\u0002${commentMatches.length-1}\u0002`;
+                });
+                // 保护多行注释
+                code = code.replace(/\/\*[\s\S]*?\*\//g, (match) => {
+                    commentMatches.push(match);
+                    return `\u0002${commentMatches.length-1}\u0002`;
+                });
+            }else{
                 // 删除单行注释 (//...)
                 code = code.replace(/\/\/.*$/gm, '');
                 // 删除多行注释 (/*...*/)
@@ -585,7 +596,11 @@
             }
 
             let formattedCode = result.join('\n');
-            
+            // 恢复被保护的注释内容（如果不删除注释）
+            if (!removeComments) {
+                formattedCode = formattedCode.replace(/\u0002(\d+)\u0002/g, (_, n) => 
+                    commentMatches[parseInt(n)]);
+            }
             // 二次保护字符串内容（用于运算符修正）
             const finalStringMatches = [];
             formattedCode = formattedCode.replace(stringAndCharRegex, (match) => {
