--- a/tools/format/index.html
+++ b/tools/format/index.html
@@ -156,6 +156,8 @@
     <p><del>真的很不容易，三连支持一下吧c1wc1</del></p>
     <p>然后就是关于空格没有添加完全的问题，把格式完的代码再输入几遍就可以了~</p>
 
+    <p>Note: 如果你是和我一样的紧凑党（即以下选项都不选），则建议前往<a href="/tools/formatold">这个网站</a> for 这个网站的 BUG 相对来说较少~</p>
+
     <div class="options-container">
         <div class="option-group">
             <h3><input type="checkbox" id="allPunctuation"> 标点符号</h3>
